# dbf-to-sqlite

./: .gitignore  README.md  dbf-to-sqlite.cabal  stack.yaml
app/: Main.hs
src/: DBase.hs
