name:                dbf-to-sqlite
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/dbf-to-sqlite#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DBase
  build-depends:       base >= 4.7 && < 5
                     , selda
                     , selda-sqlite
                     , binary
                     , bytestring
                     , text
                     , HDBC
  default-language:    Haskell2010

executable dbf-to-sqlite-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dbf-to-sqlite
                     , bytestring
                     , HDBC
                     , HDBC-sqlite3
                     , filepath
                     , zip-archive
  default-language:    Haskell2010

test-suite dbf-to-sqlite-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dbf-to-sqlite
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/dbf-to-sqlite
